2 stretch finished, nav bar fixed/opacity, CSS animation

--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,7 @@ button:hover {
   }
 }
 .nav-header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -199,6 +200,11 @@ button:hover {
   font-family: #454A59;
   border: 1px solid #F1F1F1;
   padding: 1%;
+  animation-name: colorful;
+  animation-duration: 5s;
+  position: fixed;
+  top: 0;
+  opacity: 0.95;
 }
 .nav-header a {
   text-decoration: none;
@@ -222,6 +228,18 @@ button:hover {
   .nav-header h1 {
     padding: 2%;
   }
+  .nav-header a:hover {
+    text-decoration: underline;
+    color: #81848E;
+  }
+}
+@keyframes colorful {
+  0% {
+    background-color: #23293B;
+  }
+  100% {
+    background-color: #F6F7F8;
+  }
 }
 footer {
   color: #22283B;
@@ -237,6 +255,9 @@ footer {
   footer {
     margin-top: 3%;
   }
+}
+.home {
+  margin-top: 100px;
 }
 .home .intro h2 {
   padding: 15px;
