--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,15 @@
 .nav-header {
+    width: 100%;
     .align-column(flex, column, center);
     .nav-mix(@wild-sand, @river-bend);
     border: 1px solid @sea-shell;
     padding: 1%;
+    animation-name: colorful;
+    animation-duration: 5s;
+    position: fixed;
+    top: 0;
+    opacity: 0.95;
+    
 
     a {
         text-decoration: none;
@@ -28,5 +35,21 @@
         h1 {
             padding: 2%;
         }
+
+        a:hover {
+            .nav-ani();
+        }
     }
+
+    
+  
+  
+  @keyframes colorful {
+    0% {
+      background-color: @ebony-clay;
+    }
+    100% {
+      background-color: @porcelain;
+    }
+  }
 }
